Resolved chartfx problems